# laurus-llm-rust

./: Cargo.toml  setup.sh
src/: config.rs  main.rs
src/model/: loader.rs  mod.rs  structs.rs
src/server/: app_state.rs  mod.rs  routes.rs  server.rs  state.rs
src/server/handlers/: generate.rs  mod.rs  mode_handler.rs  status.rs  switch_model.rs
steps/: 01_check_cuda.sh  02_install_deps.sh  03_install_rust.sh  04_setup_rust_project.sh  05_build_llama_cpp.sh  06_download_model.sh  07_build_and_run.sh
